syntax = "proto2";

package org.sjc.serializer.protoc;

option java_outer_classname = "test";

message DataObject {
    enum Type {
        T1 = 0;
        T2 = 1;
        T3 = 2;
        T4 = 3;
    }
    optional Type type = 1;
    optional sint64 longValue = 2;
    optional string stringValue = 3;
    optional bytes byteArray = 4;
}
